--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -22,6 +22,7 @@
     "prisma:generate": "pnpm prisma generate --schema=src/infrastructures/orm/prisma/schema.prisma && docker compose --project-directory .. exec backend pnpm prisma generate --schema=/app/src/infrastructures/orm/prisma/schema.prisma",
     "prisma:migrate:dev": "docker compose --project-directory .. exec backend pnpm prisma migrate dev --schema=/app/src/infrastructures/orm/prisma/schema.prisma && pnpm prisma generate --schema=src/infrastructures/orm/prisma/schema.prisma",
     "prisma:migrate:deploy": "docker compose --project-directory .. exec backend pnpm prisma migrate deploy --schema=/app/src/infrastructures/orm/prisma/schema.prisma",
+    "prisma:migrate:reset": "docker compose --project-directory .. exec backend pnpm prisma migrate reset --schema=/app/src/infrastructures/orm/prisma/schema.prisma",
     "prisma:studio": "docker compose --project-directory .. exec backend pnpm prisma studio --schema=/app/src/infrastructures/orm/prisma/schema.prisma"
   },
   "dependencies": {
